--- a/asset-management-backend/.env
+++ b/asset-management-backend/.env
@@ -1,3 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb+srv://yourusername:yourpassword@cluster.mongodb.net/assetDB
+MONGO_URI=mongodb+srv://chathu2244:chathu2244@cpcassest.71tvg.mongodb.net/assetDB
 JWT_SECRET=your_jwt_secret_key
+
